ocaml/golden/errors/e302_iota_bare_const.camdl
# E302: bare constant used as seeding term
# beta * (I + 1e-6) * S / N — Const(1e-6) is dimensionless, I is P
# Fix: declare iota : count = 1e-6
time_unit = 'days

compartments { S, I, R }

let N = S + I + R

parameters {
  beta  : rate
  gamma : rate
}

transitions {
  infection : S --> I  @ beta * (I + 1e-6) * S / N
  recovery  : I --> R  @ gamma * I
}

init {
  S = 990
  I = 10
}

simulate {
  from = 0 'days
  to   = 100 'days
}
